@@ -61,7 +61,7 @@ pthread_spin_lock (pthread_spinlock_t * lock)
   s = *lock;
 
   while ((PTW32_INTERLOCKED_LONG) PTW32_SPIN_LOCKED ==
-	 PTW32_INTERLOCKED_COMPARE_EXCHANGE_LONG ((PTW32_INTERLOCKED_PTR) &s->interlock,
+	 PTW32_INTERLOCKED_COMPARE_EXCHANGE_LONG ((PTW32_INTERLOCKED_LONGPTR) &s->interlock,
 					          (PTW32_INTERLOCKED_LONG) PTW32_SPIN_LOCKED,
 					          (PTW32_INTERLOCKED_LONG) PTW32_SPIN_UNLOCKED))
     {
